--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -4,15 +4,17 @@
 
 body{
     margin: 0px;
+    text-align: center;
 }
 
 header{
     display: inline-flex;
-    background-image: linear-gradient(yellow,darkgreen);
+    background-image: linear-gradient(yellow,green);
     width: 100%;
     height: 150px;
     align-content: center;
     justify-content: center;
+    border-bottom: 1px solid black;
 }
 
 #headerName{
@@ -32,7 +34,8 @@ header{
 #playlistDisplay{
     font-family: 'Nova Script', cursive;
     margin: auto;
-    width: 600px;
+    width: 90%;
+    height: 100%;
     list-style-type: none;
     padding-top: 25px;
     padding-right: 35px;
@@ -47,21 +50,58 @@ header{
     background-color: rgba(255,0,0, 0.3);
     color: lemonchiffon;
 }
+
+#playlistDisplay li:hover{
+    background-color: rgba(255,0,0);
+    color: white;
+    transition: 1000ms;
+    cursor: pointer;
+}
 .navbar{
   overflow: hidden;  
-  background-image: linear-gradient(red, rgb(255, 0, 128));
+  
     display: flex;
     justify-content: center;
     justify-content: space-around;
     align-items: flex-end;
+
 }
+
 
 #playlistSelection{
     font-family: 'Nova Script', cursive;
+    background-color: greenyellow;
+    text-align: center;
+    border-radius: 50px;
+    border: 4px solid red;
+    margin: 20px;
+    cursor: pointer;
+
 }
 
+
 #picture{
+    display:inline-flex;
+    align-self: center;
+    margin-left: 20px;
     height: 300px;
     width: 300px;
 }
 
+
+@media (max-width: 1030px){
+    #playlistDisplay{
+        flex-direction: column;
+        align-items: center;
+    }
+#playlistDisplay li{
+    flex-shrink: 1 0 auto;
+    }
+}
+
+@media (max-width: 530px){
+    #picture{
+        width: 60%;
+        height: 60%;
+    }
+}
