--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -15,6 +15,7 @@ header{
     align-content: center;
     justify-content: center;
     border-bottom: 1px solid black;
+    margin-bottom: 20px;
 }
 
 #headerName{
@@ -45,6 +46,7 @@ header{
     padding-bottom: 25px;
     text-align: center;
     background-image: linear-gradient(yellow, green, yellow);
+    margin-top:20px;
     
 }
 #playlistDisplay li{
@@ -79,7 +81,7 @@ header{
     text-align: center;
     border-radius: 50px;
     border: 4px solid red;
-    margin: 20px;
+    margin: auto;
     cursor: pointer;
 }
 
@@ -88,6 +90,9 @@ header{
     border: 4px solid greenyellow;
     color: white;
     transition: 700ms;
+}
+#like_button{
+    display:none;
 }
 
 
